# RTv1

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.old  README.md  RTv1  author  main.c  main.patch  new  old  random  rtv1.h
computing/: computing.h  gpu_compute.cl
frameworks/SDL2/: SDL_events.h  SDL_mouse.h  SDL_render.h
includes/: parser_external.h  parser_internal.h  rt.h  rtv1.h  rtv_shared_types.h
libft/: Makefile  a.out  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_delchr.c  ft_getline.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitesp.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_rgb.c  ft_split_arr.c  ft_strcat.c  (+32 more)
libft/includes/: libft.h
maps/: example.1
scene/: RT.conuses  RT.conusesJSON  RT.manda_part1JSON  RT.manda_part2JSON  RT.plane  RT.planeJSON  RT.scene_1  RT.scene_1JSON  RT.scene_2  RT.scene_2JSON  RT.scene_3  RT.scene_3JSON  RT.sphere  RT.sphereJSON  RT.sphereJSON-parse  manda_part.json  manda_part2.json  plane.json  scene.0  scene.1  scene.2  scene.3  scene_1.json  sphere.json
src/: RT_read_file.c  main.c  main.c.orig  main.c.rej  rt_controllers.c  rt_errors.c  rt_init.c  rt_kernels.c  rt_parser.c  rt_parser1.c  rt_tools.c
src/deprecated/: rt_parser.c  rt_parser1.c
src/legacy_parser/: parser_core.c
src/legacy_parser/objects/: parse_cone.c  parse_cone2.c  parse_cylinder.c  parse_cylinder2.c  parse_ellipsoid.c  parse_ellipsoid1.c  parse_ellipsoid2.c  parse_materials0_1.c  parse_materials1_0.c  parse_materials2_0.c  parse_materials3_0.c  parse_materials3_1.c  parse_objects1.c  parse_paraboloid.c  parse_paraboloid1.c  parse_paraboloid2.c  parse_plane.c  parse_plane1.c  parse_plane2.c  parse_plane_limit1.c  parse_plane_limit2.c  parse_sphere.c  parse_torus.c  parse_torus1.c  parse_torus2.c  parse_triangle.c  parse_triangle1.c  parse_triangle2.c
src/legacy_parser/scene/lights/: parse_lights_1.c  (+4 more)
src/legacy_parser/support/: parser_support_1.c  parser_support_3.c
src/parser/: camere.json  change_double_to_float.patch  light.json  parse_err.c  parse_generic.c  parse_main.c  parse_specific.c  parse_specific_objects.c  parse_validate.c  parser.h  parser_core.c  removed_memcpy_from_algo.patch  textfile.txt
src/parser/objects/: parse_cone1.c  parse_cylinder1.c  parse_disc.c  parse_disc1.c  parse_disc2.c  parse_materials0_0.c  parse_materials1_1.c  parse_materials2_1.c  parse_objects.c  parse_objects2.c  parse_plane_limit.c  parse_sphere1.c
src/parser/scene/: parse_camera.c  parse_render_0.c  parse_render_1.c  parse_scene.c
src/parser/support/: parser_support_0.c  parser_support_2.c
(+5 files in other folders)
